fix spacing and width of module item
changes the spacing between module item title and
supplemental info to 8px in Teacher View and
Student View. These changes also fix the module
item width bug in Student View.

fixes LX-3194
fixes LX-3205
flag=modules_page_rewrite
flag=modules_page_rewrite_student_view

test plan:
1. create a course with a module
2. add an assignment to the module
3. edit the assignment so that there is content under the
module item title
4. observe that the space between the module item title
and supplemental content is 8px
5. switch to Student View and observe that the space
between the module item title and supplemental content
is also 8px
6. observe that the module item is the correct width
and that the right side of the module item is visible

Reviewed-on: https://gerrit.instructure.com/c/canvas-lms/+/386677
Tested-by: Service Cloud Jenkins <svc.cloudjenkins@instructure.com>
QA-Review: Eric Saupe <eric.saupe@instructure.com>
Product-Review: Hannah Roach <hannah.roach@instructure.com>

--- a/app/stylesheets/components/_g_context_modules.scss
+++ b/app/stylesheets/components/_g_context_modules.scss
@@ -510,7 +510,6 @@ $context_module_bg_color: $ic-color-light;
       display: none;
     }
   }
-  width: 100%;
   .move_item_link, .links a {
     visibility: hidden;
   }
